test/expected/explain_o_delete_pv_i.out
explain int operator delete(void*)
        ^
9: error: invalid operator delete return type "int"; must be "void"
